<resources>
    <string name="group_quit">"删除并退出"</string>
     <string name="de_discussion_name">"讨论组名称"</string>
   <string name="friend_list_multi_choice_comfirt_btn">"确定(%1$s)"</string>
    <string name="de_save">"保存"</string>
    <string name="public_account_search">"搜索"</string>
    <string name="main_name">融云</string>
    <string name="de_new_friends">"新的朋友"</string>
    <string name="app_name">龙商家信</string>
    <string name="my_dt">我的动态</string>
    <string name="my_mm">我的买卖</string>
    <string name="my_wl">我的物流</string>
    <string name="receipt_address_management">收货地址管理</string>
    <string name="my_cl">我的车辆</string>
    <string name="friend_mm">买卖动态</string>
    <string name="friend_wl">物流动态</string>
    <string name="friend_cl">车辆动态</string>
    <string name="friend_dt">好友动态</string>
    <string name="my_sp">我的商品</string>
    <string name="nearPeople">附近的人</string>
    <string name="sendSP">发布商品</string>
    <string name="applyFor">购物车</string>
    <string name="set">设置</string>
    <string name="yq">邀请</string>
    <string name="yq_d">短信邀请</string>
    <string name="yq_q">QQ邀请</string>
    <string name="yq_w">微信邀请</string>
    <string name="mine">个人中心</string>
    <string name="dt">动态</string>
    <string name="more">发布</string>
    <string name="de_actionbar_set_conversation">"聊天设置"</string>
    <string name="str_dynamic">动态</string>
    <string name="shouye">首页</string>
    <string name="chat_activity_title_str">会话</string>
    <string name="str_goods">商品</string>
    <string name="str_qun">推荐群聊</string>
    <string name="contactlist">通讯录</string>
    <string name="user_id">id</string>
    <string name="user_ID">ID:</string>
    <string name="userName">name</string>
    <string name="username">用户名:</string>
    <string name="usernickName">昵称:</string>
    <string name="nickName">昵称</string>
    <string name="add_contacts">通讯录</string>
    <string name="head">头像</string>
    <string name="Name">名字</string>
    <string name="userNumber">约我号</string>
    <string name="userPhone">电话</string>
    <string name="userSex">性别</string>
    <string name="userLocation">我的位置</string>
    <string name="set_password">修改密码</string>
    <string name="night_mode">夜间模式</string>
    <string name="contact_us">联系客服</string>
    <string name="clear_cache">清除缓存</string>
    <string name="about_to_me">关于龙商家信</string>
    <string name="logout">退出登录</string>
    <string name="about_me">个人信息</string>
    <string name="save">保存</string>
    <string name="set_uer_name">姓名</string>
    <string name="set_uer_sex">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="more_icon_text">文字</string>
    <string name="more_icon_xiangce">相册</string>
    <string name="more_icon_camera">视频</string>
    <string name="distance">距离</string>
    <string name="set_bq_bz">设置标签和备注</string>
    <string name="set_bz">备注</string>
    <string name="phone_number">电话号码</string>
    <string name="district">地区</string>
    <string name="he_she_dt">他的动态</string>
    <string name="he_she_sp">他的商品</string>
    <string name="sendData">发消息</string>
    <string name="addFriend">加好友</string>
    <string name="register_user_exits">"该邮箱已注册"</string>
    <string name="sp_name">商品名称</string>
    <string name="keyword">关键词</string>
    <string name="sp_classify">商品分类</string>
    <string name="ss_classify">所属分类</string>
    <string name="sp_sort">商品排序（默认99）</string>
    <string name="show_kg">计算单位显示（默认千克）</string>
    <string name="sp_data">商品数据</string>
    <string name="sp_number">商品货号</string>
    <string name="save_sp">库存</string>
    <string name="market_price">市场价格</string>
    <string name="sell_price">销售价格</string>
    <string name="cost_price">成本价格</string>
    <string name="weight">重量（克）</string>
    <string name="sp_state">商品状态</string>
    <string name="cp_xc">产品相册</string>
    <string name="cp_zt">产品状态</string>
    <string name="cp_sj">上架</string>
    <string name="cp_null">0张</string>
    <string name="yes">确定</string>
    <string name="login_uername">登录用户名</string>
    <string name="login_password">密码</string>
    <string name="login_password_yes">确认密码</string>
    <string name="login_yes_name">商户真实全称</string>
    <string name="login_yes_zlcl">商户资质材料</string>
    <string name="login_district">地区</string>
    <string name="login_district_particular">详细地址</string>
    <string name="login_phoneNumber">手机号码</string>
    <string name="login_postbox">邮箱</string>
    <string name="login_guanwang">企业官网</string>
    <string name="login_apply">申请</string>
    <string name="app_login_show">用户名</string>
    <string name="app_login_password">密码</string>
    <string name="app_sign_in">登录</string>
    <string name="app_sign_up">注册</string>
    <string name="app_fogot_password">忘记密码?</string>
    <string name="login_erro_is_null">"用户名、密码不能为空"</string>
    <string name="register_is_null">"邮箱、密码、昵称 不能为空"</string>
    <string name="register_success">"注册成功"</string>
    <string name="register_failure">"注册失败"</string>
    <string name="register_input_email">"输入邮箱"</string>
    <string name="register_input_password">"输入密码"</string>
    <string name="register_input_nickname">"昵称"</string>
    <string name="register_btn_argee">"注册"</string>
    <string name="register_email_error">"邮箱地址不合法"</string>
    <string name="login_success">"登录成功"</string>
    <string name="login_failure">"登录失败"</string>
    <string name="register_user_agreement">"阅读用户协议"</string>
    <string name="register_agree">"同意并注册"</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_conversation">会话</string>
    <string name="main_group">群组</string>
    <string name="record_save_dialog_cancel">取消</string>
    <string name="record_save_dialog_ok">确定</string>
   <string name="record_save_dialog_title">"请设置群组名"</string>
   <string name="dialog_title">"请输入回复内容"</string>
    <string name="main_chatroom">聊天室</string>
    <string name="main_customer">客服</string>
    <string name="add_chat">发起聊天</string>
    <string name="add_select_group">选择群组</string>
    <string name="add_voip">网络电话</string>
    <string name="set_personal_information">我的账号</string>
    <string name="set_news_reminded">新消息提醒</string>
    <string name="set_privacy">隐私</string>
    <string name="set_set">设置</string>
    <string name="set_rongcloud">关于融云</string>
    <string name="set_sign_out">退出</string>
    <string name="no_read_message">"···"</string>
    <string name="new_message_notice">消息免打扰</string>
    <string name="new_message_show">新消息提醒</string>
    <string name="new_message_voice">声音</string>
    <string name="new_message_vibration">震动</string>
    <string name="new_message_prompt_voice">新消息提示音</string>
    <string name="new_message_follow_system">跟随系统</string>
    <string name="add_validation">加我时需要验证</string>
    <string name="the_blacklist">黑名单</string>
    <string name="join_the_blacklist">加入黑名单</string>
    <string name="portrait">头像</string>
    <string name="my_username">昵称</string>
    <string name="good_name">好的名字可以让你的朋友更容易记住</string>
    <string name="new_name">新昵称</string>
    <string name="update_log">更新日志</string>
    <string name="function_introduce">功能介绍</string>
    <string name="version_number">V2.1.0</string>
    <string name="dv_document">开发者文档</string>
    <string name="rongcloud_web">官方网站</string>
    <string name="new_version_update">当前版本</string>
    <string name="update_profile_success">昵称修改成功</string>
    <string name="update_profile_faiture">昵称修改失败</string>
    <string name="profile_not_null">昵称不能为空</string>
    <string name="de_set_clear_message">清空聊天记录</string>
    <string name="de_notification_start">开始时间</string>
    <string name="de_notification_end">结束时间</string>
    <string name="de_fr_delete">删除并退出</string>
    <string name="de_setting_set_top">置顶</string>
    <string name="de_setting_conversation_notify">新消息通知</string>
    <string name="de_setting_clear_msg_name">清空聊天信息</string>
    <string name="commoditydescription">现货文化生活杂志 homeland家园2014年10月第106期</string>
    <string name="the_price">￥13.00</string>
    <string name="rc_connect">Connect</string>
    <string name="rc_app_self_chat">Self Chat</string>
    <string name="rc_friend">Friend</string>
    <string name="rc_information">send Information message</string>
    <string name="rc_app_conversationlist">enter conversationlist</string>
    <string name="de_item_delete_friend">"删除"</string>
    <string name="group_intro">"群简介"</string>
    <string name="group_number">"群人数"</string>
    <string name="group_myname">"我在本群的昵称"</string>
    <string name="group_join">"加入"</string>
    <string name="group_chat">"聊天"</string>
    <string name="personal_title">"详细资料"</string>
    <string name="personal_area">"地区"</string>
    <string name="personal_signature">"个性签名"</string>
    <string name="personal_send_message">"发消息"</string>
    <string name="personal_send_voip">"语音聊天"</string>
    <string name="public_add_address">"添加好友"</string>
    <string name="friend_send">"好友请求已发送"</string>
    <string name="friend_send_success">"发送好友请求成功"</string>
    <string name="de_actionbar_myacc">"个人账号"</string>
    <string name="de_actionbar_detail">"个人详情"</string>
    <string name="de_actionbar_sub_group">"群组"</string>
    <string name="de_actionbar_sub_private">"我的私人会话"</string>
    <string name="de_actionbar_sub_discussion">"我的讨论组"</string>
    <string name="de_actionbar_sub_system">"系统消息"</string>
    <string name="de_actionbar_sub_defult">"聊天"</string>
    <string name="de_actionbar_set_public">"公众号"</string>
    <string name="de_actionbar_update_discussion">"修改讨论组昵称"</string>
    <string name="phone_camera">Camera</string>
    <string name="title_activity_receipt_add">ReceiptAddActivity</string>
    <string name="title_activity_receipt">ReceiptActivity</string>
    <string name="title_activity_rece_address">ReceAddressActivity</string>
    <string name="title_activity_receipt_address">ReceiptAddressActivity</string>
    <string name="title_activity_address">AddressActivity</string>
    <string name="title_activity_aaa">AaaActivity</string>
</resources>