<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#4CC2FF"
        android:orientation="horizontal"
        android:padding="10dp" >

        <LinearLayout
            android:id="@+id/goback_grxx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerVertical="true" >

            <ImageView
                android:layout_width="@dimen/image_20height"
                android:layout_height="@dimen/image_20height"
                android:layout_gravity="center_vertical"
                android:background="@drawable/go_back" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_me"
                android:textColor="#fff"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/textSize_20username" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/goback_sz"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/nickName"
            android:textColor="#fff"
            android:textSize="@dimen/textSize_20username" />
        <TextView
            android:id="@+id/save_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="14dp"
            android:gravity="right"
            android:text="@string/save"
            android:textColor="#fff"
            android:textSize="@dimen/textSize_20username" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <com.lst.lstjx.view.ClearEditText
            android:id="@+id/set_user_name"
            android:layout_width="272dp"
            android:layout_height="47dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.87"
            android:background="@drawable/name"
            android:ems="10"
            android:gravity="left|center"
            android:hint="请输入新昵称" >

        </com.lst.lstjx.view.ClearEditText>

        
    </LinearLayout>

</LinearLayout>